--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,14 @@
     @apply input input-bordered input-primary rounded w-full;
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
